--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "root": true,
+  "extends": ["eslint:recommended", "next", "prettier"],
+  "settings": {
+    "next": {
+      "rootDir": "./"
+    }
+  }
 }
