--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.26",
     "prisma": "^5.0.0",
     "tailwindcss": "^3.3.3"
