--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.2.0",
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
@@ -22,9 +23,11 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "typescript": "5.1.6",
+    "uploadthing": "^5.2.1",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
