--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "js-file-download": "^0.4.12",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
