--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-file-download": "^0.4.12",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
