--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-file-download": "^0.4.12",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
+    "next-intl": "^2.19.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
