--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/seedrandom": "^3.0.5",
     "@uploadthing/react": "^5.2.0",
     "axios": "^1.4.0",
     "eslint": "8.45.0",
@@ -30,6 +31,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
+    "seedrandom": "^3.0.5",
     "typescript": "5.1.6",
     "uploadthing": "^5.2.1",
     "usehooks-ts": "^2.9.1"
